<?xml version="1.0"?>
<package format="2">
    <name>swarm_functions</name>
    <version>1.1.0</version>
    <description>The swarm functions library provides simple functionalities that enable swarm algorithms to work. It is part of the swarm library.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>Apache License 2.0</license>

    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">http://wiki.ros.org/swarm_functions</url>

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <author email="sende@lakeside-labs.com">Micha Sende</author>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>area_division</exec_depend>
    <exec_depend>coverage_path</exec_depend>
    <exec_depend>kinematics_exchanger</exec_depend>
    <exec_depend>state_exchanger</exec_depend>
    <exec_depend>target_monitor</exec_depend>
    <exec_depend>task_allocation</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <metapackage />
    </export>
</package>
