<?xml version="1.0"?>
<package format="2">
    <name>task_allocation</name>
    <version>1.0.0</version>
    <description>A package that offers an action server to assign a task to a cyber physical system (CPS).</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="prato@ismb.it">Gianluca Prato</maintainer>
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>Apache License 2.0</license>

    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/task_allocation</url> -->

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>actionlib</depend>
    <depend>cpswarm_msgs</depend>
    <depend>actionlib_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
