<?xml version="1.0"?>
<package format="2">
    <name>task_allocation</name>
    <version>1.1.0</version>
    <description>A package that offers action servers for assigning tasks between cyber physical system (CPS).</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>Apache License 2.0</license>

    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">http://wiki.ros.org/task_allocation</url>

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <maintainer email="prato@ismb.it">Gianluca Prato</maintainer>
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

    <!-- The *depend tags are used to specify dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>actionlib</depend>
    <depend>cpswarm_msgs</depend>
    <depend>actionlib_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
